--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="excuse"> My dog atge my homework.</p>
+    <p id="excuse"> My dog ate my homework.</p>
+    <script src= "app.js">
+
+    </script>
+    const content = element.innerHTML;
+
+    element.innerHTML = htmlString;
 </body>
 </html>
