--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
-<body>
+<body onload="excuseGenerator()">
     <p id="excuse"> My dog ate my homework!</p>
     <script src= "app.js">
     </script>
